项目基础框架搭建，用户注册登录完毕
